@@ -14,6 +14,7 @@ next
 -added lipop component
 -added blast2go component
 -fixed multiple bugs to the p_func component
+-added bsml2interevidence_fasta component
 
 ergatis-v2r10b1
 ---------------
